--- a/src/App.scss
+++ b/src/App.scss
@@ -1,18 +1,20 @@
 /* Abstracts */
 
-@import './sass/base/variables';
-// @import './sass/abstracts/mixins';
+@import "./sass/base/variables";
 
 /* Base */
 
-@import './sass/base/base';
-@import './sass/base/resets';
-// @import './sass/base/mobile';
+@import "./sass/base/base";
+@import "./sass/base/resets";
 
 /* Components */
 
-@import './sass/components/dimensions';
-@import './sass/components/character';
-// @import './sass/components/universe';
-// @import './sass/components/detailPlanet';
-// @import './sass/components/moons';
+@import "./sass/components/dimensions";
+@import "./sass/components/buttonNext";
+@import "./sass/components/navegationBar";
+
+/* Pages */
+
+@import "./sass/pages/character01";
+@import "./sass/pages/character02";
+@import "./sass/pages/character03";
