--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -1,5 +1,6 @@
 body {
-    background-color: #FBFBFB;
-    // background-color: tomato;
+    background-color: $white-primary;
+    font-family: $primary-font;
+    z-index: 0;
 }
 
