--- a/src/sass/components/_dimensions.scss
+++ b/src/sass/components/_dimensions.scss
@@ -4,7 +4,7 @@ body {
     justify-content: center;
     height: 100vh;
     margin: 0;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .grid-container {
@@ -25,16 +25,19 @@ body {
     border: none;
     width: 100%;
     height: 100%;
-    border: 1px solid red;
+
 }
 
 .character {
     position: absolute;
-    perspective: 1000px;
-    height: 100%;
     width: 100%;
+    height: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
     top: 0;
     left: 0;
+    perspective: 3000px;
     transform-style: preserve-3d;
     transition: transform 0.5s;
 }
