--- a/src/sass/base/_base.scss
+++ b/src/sass/base/_base.scss
@@ -4,3 +4,31 @@ body {
     z-index: 0;
 }
 
+.characters-container {
+    height: 100vh;
+    overflow-y: scroll;
+    scroll-snap-type: y mandatory;
+    width: 100%;
+    overflow-x: hidden;
+
+    .panel {
+        position: relative;
+        scroll-snap-align: start;
+        height: 100vh;
+        width: 100%;
+    }
+}
+
+.character {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    top: 0;
+    left: 0;
+    perspective: 3000px;
+    transform-style: preserve-3d;
+    transition: transform 0.5s;
+}
