--- a/src/sass/components/_dimensions.scss
+++ b/src/sass/components/_dimensions.scss
@@ -1,43 +1,35 @@
 body {
-    display: flex;
-    align-items: center;
-    justify-content: center;
     height: 100vh;
     margin: 0;
     overflow-x: hidden;
-}
 
-.grid-container {
+}
+.card {
     position: absolute;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    height: 100%;
+    height: 100vh;
     width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 100;
-    transform: translateZ(200px);
+    overflow: hidden;
+    .grid-container {
+        position: absolute;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        height: 100%;
+        width: 100%;
+        top: 0;
+        left: 0;
+        z-index: 100;
+        transform: translateZ(200px);
+        border: 1px solid red;
+
+    }
+    
+    .grid {
+        position: relative;
+        border: none;
+        width: 100%;
+        height: 100%;
+        border: 1px solid red;
+    }
 }
 
-.grid {
-    position: relative;
-    border: none;
-    width: 100%;
-    height: 100%;
-
-}
-
-.character {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    display: flex;
-    align-content: center;
-    justify-content: center;
-    top: 0;
-    left: 0;
-    perspective: 3000px;
-    transform-style: preserve-3d;
-    transition: transform 0.5s;
-}
