--- a/src/App.scss
+++ b/src/App.scss
@@ -18,3 +18,4 @@
 @import "./sass/pages/character01";
 @import "./sass/pages/character02";
 @import "./sass/pages/character03";
+@import "./sass/pages/character04";
