--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -1,10 +1,14 @@
 // Fonts
 @import url('https://fonts.googleapis.com/css2?family=Shadows+Into+Light&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Protest+Strike&display=swap');
 
 $primary-font: 'Shadows Into Light', cursive;
-
+$secondary-font: 'Protest Strike', sans-serif;
 
 // Colors
 
 $white-primary: #f0f8ff;
 $black-primary: #0B1215;
+$blue-primary: #258aad;
+$blue-secondary: #8ed4ce;
