--- a/src/sass/pages/_character01.scss
+++ b/src/sass/pages/_character01.scss
@@ -1,12 +1,27 @@
 .character01 {
     z-index: 0;
+    // Antiguo Fondo -Pendiente de Eliminar
+    // .container-background-character {
+    //     transform: translateY(-400px) translateZ(-1000px);
+    //     filter: brightness(1.7) blur(10px);
+    //     width: 100%;
+    //     .background-character{
+    //     //     width: 2500px;
+    //         animation: background-mov 10s linear infinite;
+    //     }
+    // }
     .container-background-character {
-        transform: translateY(-400px) translateZ(-1000px);
+        position: fixed;
+        top: 0;
+        width: 160%;
+        height: 600vh;
+        transform: translateY(-200px) translateZ(-1000px);
         filter: brightness(1.7) blur(10px);
-        .background-character{
-            width: 2500px;
+        overflow: hidden;
+
+        .background-character {
+            width: 100%;
             animation: background-mov 10s linear infinite;
-            
         }
     }
     .container {
@@ -22,8 +37,11 @@
         transform: translateZ(100px);
         .character-name {
             position: absolute;
-            -webkit-text-stroke: 1px $black-primary;
+            -webkit-text-stroke: 1px $blue-primary;
             z-index: 10;
+            font-family: $secondary-font;
+            color: $white-primary;
+            filter: drop-shadow(0px 0px 5px $blue-primary);
         }
 
     }
