--- a/src/sass/pages/_character03.scss
+++ b/src/sass/pages/_character03.scss
@@ -4,24 +4,12 @@
     position: absolute;
     left: 0;
     top: 200%;
-    z-index: 10;
+    z-index: 5;
 
-    background: rgb(240, 248, 255);
-    background: -moz-linear-gradient(
-        180deg,
-        rgba(240, 248, 255, 0) 0%,
-        rgba(11, 18, 21, 1) 100%
-    );
-    background: -webkit-linear-gradient(
-        180deg,
-        rgba(240, 248, 255, 0) 0%,
-        rgba(11, 18, 21, 1) 100%
-    );
-    background: linear-gradient(
-        180deg,
-        rgba(240, 248, 255, 0) 0%,
-        rgba(11, 18, 21, 1) 100%
-    );
+    background: rgb(240,248,255);
+    background: -moz-linear-gradient(180deg, rgba(240,248,255,1) 0%, rgba(240,248,255,0) 11%, rgba(11,18,21,1) 100%);
+    background: -webkit-linear-gradient(180deg, rgba(240,248,255,1) 0%, rgba(240,248,255,0) 11%, rgba(11,18,21,1) 100%);
+    background: linear-gradient(180deg, rgba(240,248,255,1) 0%, rgba(240,248,255,0) 11%, rgba(11,18,21,1) 100%);
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#f0f8ff",endColorstr="#0b1215",GradientType=1);
 
     .container-character-image {
@@ -34,7 +22,7 @@
         justify-content: center;
         align-items: center;
         .character-image {
-            height: 80%;
+            height: 70%;
         }
     }
     .container-text-description {
@@ -45,10 +33,25 @@
         transform: translate(-50%, -50%);
         left: 50%;
         bottom: 50%;
+        color: $white-primary;
         .text-description {
             font-size: 1.7rem;
             text-align: center;
             opacity: 0;
+        }
+    }
+
+    .morphing {
+        position: absolute;
+        width: 200px;
+        height: 200px;
+        z-index: -10;
+        align-self: center;
+        .triangle {
+            fill: none;
+            stroke: #8ed4ce;
+            stroke-width: 4;
+            filter: brightness(100%) drop-shadow(0px 0px 5px $blue-primary);
         }
     }
 }
