--- a/src/sass/pages/_character04.scss
+++ b/src/sass/pages/_character04.scss
@@ -30,6 +30,11 @@
             width: 190px;
             height: 254px;
             perspective: 1000px;
+
+            .no-hover {
+                pointer-events: none;
+              }
+
             .container-description {
                 position: absolute;
                 padding-left: 2rem;
@@ -52,7 +57,7 @@
                     transform: scaleX(-1);
                     position: relative;
                     left: -90px;
-                    top:-25px;
+                    top: -25px;
                     width: 90%;
                 }
             }
@@ -62,10 +67,9 @@
                 width: 100%;
                 height: 100%;
                 text-align: center;
-                transition: transform 0.5s;
+                transition: transform 0.8s;
                 transform-style: preserve-3d;
                 cursor: pointer;
-
                 &:hover {
                     transform: rotateY(180deg) scale(1.6);
                 }
@@ -108,7 +112,7 @@
                 background: linear-gradient(
                     43deg,
                     rgb(65, 88, 208) 0%,
-                    rgb(200, 80, 192) 100%,
+                    rgb(200, 80, 192) 100%
                 );
             }
 
@@ -129,15 +133,28 @@
 
     @keyframes animate {
         0% {
-            opacity: 0.3;
+          opacity: 0.3;
         }
-
-        80% {
-            opacity: 1;
+      
+        40% {
+          opacity: 1;
         }
-
+      
+        60% {
+          opacity: 0.3;
+        }
+      
         100% {
-            opacity: 0.3;
+          opacity: 0.3;
         }
-    }
+      
+        /* Agrega la clase temporal durante la animación */
+        0%, 100% {
+          pointer-events: auto;
+        }
+      
+        40%, 60% {
+          pointer-events: none;
+        }
+      }
 }
