--- a/src/sass/components/_navegationBar.scss
+++ b/src/sass/components/_navegationBar.scss
@@ -1,12 +1,13 @@
 .container-navegation-bar{
     position: absolute;
+    width: 100%;
 }
 
 .navegation-bar {
     position: absolute;
     width: 30rem;
     height: 3rem;
-    right: -1200px;
+    right: -900px;
     top: 0;
     background-color: $white-primary;
     z-index: 1000;
