--- a/src/sass/pages/_character04.scss
+++ b/src/sass/pages/_character04.scss
@@ -23,6 +23,7 @@
         justify-content: space-evenly;
         align-items: center;
         height: 100%;
+        width: 100%;
         translate: 30rem;
 
         .myCard {
@@ -30,10 +31,7 @@
             width: 190px;
             height: 254px;
             perspective: 1000px;
-
-            .no-hover {
-                pointer-events: none;
-              }
+            border: solid 1px rgb(0, 255, 234);
 
             .container-description {
                 position: absolute;
@@ -70,9 +68,6 @@
                 transition: transform 0.8s;
                 transform-style: preserve-3d;
                 cursor: pointer;
-                &:hover {
-                    transform: rotateY(180deg) scale(1.6);
-                }
             }
 
             .frontSide,
@@ -129,28 +124,27 @@
                 transform: rotateY(180deg);
             }
         }
+        .myCard:hover .innerCard {
+            transform: rotateY(180deg) scale(1.6);
+        }
+        
     }
 
     @keyframes animate {
         0% {
             opacity: 0.3;
-            pointer-events: auto;
         }
-    
+
         40% {
             opacity: 1;
-            pointer-events: none;
         }
-    
+
         60% {
             opacity: 0.3;
-            pointer-events: none;
         }
-    
+
         100% {
             opacity: 0.3;
-            pointer-events: auto;
         }
     }
-    
 }
