--- a/src/App.scss
+++ b/src/App.scss
@@ -19,3 +19,5 @@
 @import "./sass/pages/character02";
 @import "./sass/pages/character03";
 @import "./sass/pages/character04";
+@import "./sass/pages/character05";
+@import "./sass/pages/character06";
