--- a/src/sass/pages/_character04.scss
+++ b/src/sass/pages/_character04.scss
@@ -6,6 +6,10 @@
     top: 300%;
     z-index: 5;
     background-color: $black-primary;
+    .background-neon {
+        position: absolute;
+        bottom: 0;
+    }
 
     .container-title {
         position: absolute;
