--- a/src/sass/pages/_character05.scss
+++ b/src/sass/pages/_character05.scss
@@ -7,6 +7,29 @@
     z-index: 0;
     color: $white-primary;
 
+    // background: rgb(11, 18, 21);
+    // background: -moz-linear-gradient(
+    //     180deg,
+    //     rgba(11, 18, 21, 1) 0%,
+    //     rgba(240, 248, 255, 0) 10%,
+    //     rgba(240, 248, 255, 0) 90%,
+    //     rgba(11, 18, 21, 1) 100%
+    // );
+    // background: -webkit-linear-gradient(
+    //     180deg,
+    //     rgba(11, 18, 21, 1) 0%,
+    //     rgba(240, 248, 255, 0) 10%,
+    //     rgba(240, 248, 255, 0) 90%,
+    //     rgba(11, 18, 21, 1) 100%
+    // );
+    // background: linear-gradient(
+    //     180deg,
+    //     rgba(11, 18, 21, 1) 0%,
+    //     rgba(240, 248, 255, 0) 10%,
+    //     rgba(240, 248, 255, 0) 90%,
+    //     rgba(11, 18, 21, 1) 100%
+    // );
+    // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0b1215",endColorstr="#0b1215",GradientType=1);
 
     figure {
         margin: 0;
@@ -24,7 +47,7 @@
         &__inner {
             width: 100%;
             height: 100%;
-            overflow-y: hidden;
+            overflow: hidden;
         }
 
         &__content {
@@ -56,15 +79,15 @@
             --width: 200;
             display: block;
             text-align: left;
-            font-size: clamp(5rem, 15vw, 15rem);
+            font-size: clamp(3rem, 15vw, 6rem);
             font-weight: 900;
             font-variation-settings: "wdth" var(--width);
             margin: 0;
             padding: 0;
-            color: #f2f1fc;
+            color: $white-primary;
             z-index: 5;
-            mix-blend-mode: difference;
-            grid-area: 2 / 2 / 3 / 10;
+            // mix-blend-mode: difference;
+            grid-area: 2 / 2 / 7 / 10;
             align-self: end;
         }
 
@@ -83,16 +106,27 @@
     .slide:nth-of-type(1) {
         visibility: visible;
         .slide__content {
-            background-image:url('/assets/character5/background01.jpg');
+            background: linear-gradient(
+                    to right,
+                    rgb(0 0 0 / 0.2),
+                    rgb(0 0 0 / 0)
+                ),
+                url("/assets/character5/background01.jpg");
             background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+            background-position: center;
+            background-repeat: no-repeat;
         }
+
     }
 
     .slide:nth-of-type(2) {
         .slide__content {
-            background-image:url('/assets/character5/background02.jpg');
+            background: linear-gradient(
+                    to right,
+                    rgb(0 0 0 / 0.2),
+                    rgb(0 0 0 / 0)
+                ),
+                url("/assets/character5/background02.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -101,7 +135,12 @@
 
     .slide:nth-of-type(3) {
         .slide__content {
-            background-image:url('/assets/character5/background03.jpg');
+            background: linear-gradient(
+                    to right,
+                    rgb(0 0 0 / 0.2),
+                    rgb(0 0 0 / 0)
+                ),
+                url("/assets/character5/background03.jpg");
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -110,10 +149,15 @@
 
     .slide:nth-of-type(4) {
         .slide__content {
-            background-image:url('/assets/character5/background04.jpeg');
+            background: linear-gradient(
+                    to right,
+                    rgb(0 0 0 / 0.2),
+                    rgb(0 0 0 / 0)
+                ),
+                url("/assets/character5/background04.jpeg");
             background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
+            background-position: center;
+            background-repeat: no-repeat;
         }
     }
 
@@ -173,7 +217,7 @@
         }
 
         .overlay__img-cont {
-            grid-area: 5 / 4 / 10 / 11;
+            grid-area: 2 / 8 / 11 / 10;
         }
 
         .overlay__count {
@@ -182,12 +226,12 @@
 
         .slide__img-cont {
             margin-top: 0;
-            grid-area: 3 / 2 / 8 / 7;
+            grid-area: 3 / 2 / 11 / 4;
+            transform: scale(2) translateX(-70px);
         }
 
         .slide__heading {
-            grid-area: 1 / 1 / 4 / 10;
+            grid-area: 1 / 4 / 4 / 10;
         }
     }
-
 }
