--- a/src/sass/components/_buttonNext.scss
+++ b/src/sass/components/_buttonNext.scss
@@ -7,6 +7,8 @@
     left: 0;
     bottom: -15rem;
     gap: 5rem;
+    transition: all 0.5s ease;
+
     .button-discover {
         width: 12rem;
         height: 3rem;
