--- a/src/sass/base/_variables.scss
+++ b/src/sass/base/_variables.scss
@@ -12,3 +12,10 @@ $white-primary: #f0f8ff;
 $black-primary: #0B1215;
 $blue-primary: #258aad;
 $blue-secondary: #8ed4ce;
+
+//Media Queries
+
+$telefono: 480px;
+$tablet: 768px;
+$desktop: 992px;
+$desktopXL: 1500px;
