--- a/src/sass/components/_navegationBar.scss
+++ b/src/sass/components/_navegationBar.scss
@@ -67,5 +67,14 @@
         transition-delay: 0.4s;
         color: aliceblue;
       }
+    @media only screen and (max-width: $desktop){
+        width: 100%;
+        ul { 
+            justify-content: space-between;
+            padding-right: 1rem;
+        }
+
+    }
+    transition: width 0.5s ease;
 
 }
