--- a/src/sass/pages/_character01.scss
+++ b/src/sass/pages/_character01.scss
@@ -1,15 +1,5 @@
 .character01 {
     z-index: 0;
-    // Antiguo Fondo -Pendiente de Eliminar
-    // .container-background-character {
-    //     transform: translateY(-400px) translateZ(-1000px);
-    //     filter: brightness(1.7) blur(10px);
-    //     width: 100%;
-    //     .background-character{
-    //     //     width: 2500px;
-    //         animation: background-mov 10s linear infinite;
-    //     }
-    // }
     .container-background-character {
         position: fixed;
         top: 0;
@@ -42,8 +32,8 @@
             font-family: $secondary-font;
             color: $white-primary;
             filter: drop-shadow(0px 0px 5px $blue-primary);
+            transition: all 0.5s ease;
         }
-
     }
     .container-character-image {
         transform: translateZ(80px);
@@ -88,7 +78,6 @@
         }
     }
 
-
     .container-vector-plano-03 {
         transform: translateZ(200px);
     }
@@ -106,19 +95,41 @@
         justify-content: center;
         width: 100%;
         z-index: 1000;
-        
+
         .vector-plano-04 {
             width: 5rem;
             scale: 0.1;
         }
     }
     @keyframes background-mov {
-        0%, 100% {
-          transform: translateY(0);
+        0%,
+        100% {
+            transform: translateY(0);
         }
         50% {
-          transform: translateY(50px);
+            transform: translateY(50px);
         }
-      }      
+    }
 
+    @media only screen and (max-width: $telefono) {
+        .container-button-discover {
+            flex-direction: column;
+            align-items: center;
+        }
+    }
+
+    @media only screen and (max-width: $desktop) {
+        .container-character-title {
+            .character-name {
+                z-index: 100;
+                transform: translateY(50px) !important;
+            }
+        }
+        .container-vector-plano-03 {
+            display: none;
+        }
+        .container-button-discover {
+            justify-content: space-around;
+        }
+    }
 }
