--- a/src/sass/pages/_character02.scss
+++ b/src/sass/pages/_character02.scss
@@ -5,6 +5,7 @@
     left: 0;
     top: 100%;
     z-index: 10;
+    transition: all 0.5s ease;
 
     background: rgb(34, 193, 195);
     background: -moz-linear-gradient(
@@ -38,8 +39,10 @@
         top: 6rem;
         left: 25rem;
         z-index: 10;
+        transition: all 0.5s ease;
         .title {
             font-size: 5rem;
+
         }
     }
     .container-character-image {
@@ -69,6 +72,7 @@
         z-index: 5;
         .vector-plano-01 {
             width: 15rem;
+            transition: all 0.5s ease;
         }
     }
     .container-vector-plano-02 {
@@ -87,23 +91,21 @@
     .container-vector-plano-03 {
         width: 100%;
         height: 100%;
-        .ume-one{
+        .ume-one {
             position: absolute;
             rotate: 26deg;
             bottom: -7rem;
             left: -3rem;
-            
         }
-        .ume-two{
+        .ume-two {
             position: absolute;
             rotate: 3deg;
             top: 45%;
             right: 0;
             scale: 2;
-
         }
         filter: blur(5px);
-        animation: ume-mov 13s  ease-in-out infinite;
+        animation: ume-mov 13s ease-in-out infinite;
     }
     @keyframes ume-mov {
         0% {
@@ -114,17 +116,53 @@
         50% {
             transform: translateX(10px);
             rotate: 5deg;
-            scale: 1,5;
+            scale: 1, 5;
         }
         100% {
             transform: translateX(0px);
             scale: 1;
             rotate: 0deg;
         }
-      }  
-      
-      .button-discover {
+    }
+
+    .button-discover {
         background-color: $black-primary;
-        
-      }
+    }
+
+    @media only screen and (max-width: $telefono) {
+        .container-character-title {
+            mix-blend-mode: overlay;
+            left: 1rem;
+            .title {
+                transform: translateX(-110px);
+            }
+        }
+        .container-text-description {
+        .text-description {
+            width: 60%;
+            padding-left: 7rem;
+            }
+        }
+    }
+
+    @media only screen and (max-width: $desktop) {
+        .container-character-title {
+            position: absolute;
+            left: 10rem;
+        }
+        .container-vector-plano-01 {
+            .vector-plano-01 {
+                transform: translateX(-110px);
+            }
+        }
+        .container-text-description {
+            .text-description {
+                color: $white-primary;
+                text-shadow: 0 0 5px rgba(0, 0, 0, 1);
+                mix-blend-mode: difference;
+            }
+            left: 50%;
+            width: 90vh;
+        }
+    }
 }
