--- a/src/sass/pages/_character03.scss
+++ b/src/sass/pages/_character03.scss
@@ -34,10 +34,14 @@
         left: 50%;
         bottom: 50%;
         color: $white-primary;
+        transition: all 0.5s ease;
+
         .text-description {
             font-size: 1.7rem;
             text-align: center;
             opacity: 0;
+            transition: all 0.5s ease;
+
         }
     }
 
@@ -53,5 +57,18 @@
             stroke-width: 4;
             filter: brightness(100%) drop-shadow(0px 0px 5px $blue-primary);
         }
+    }
+    @media only screen and (max-width: $telefono) {
+        .container-text-description{
+            width: 60%;
+            .text-description {
+                text-align: center;
+                font-size: 1rem;
+            }
+        }
+    }
+
+    @media only screen and (max-width: $desktop) {
+
     }
 }
