--- a/src/sass/pages/_character04.scss
+++ b/src/sass/pages/_character04.scss
@@ -15,7 +15,9 @@
         position: absolute;
         color: $white-primary;
         width: 100%;
+        
         .title {
+            transition: all 0.5s ease;
             font-size: 5rem;
             text-align: center;
         }
@@ -148,5 +150,16 @@
         100% {
             opacity: 0.3;
         }
+    }
+
+    @media only screen and (max-width: $telefono) {
+        .container-title {
+            .title {
+                font-size: 4rem;
+            }
+        }
+    }
+
+    @media only screen and (max-width: $desktop) {
     }
 }
