--- a/src/sass/pages/_character05.scss
+++ b/src/sass/pages/_character05.scss
@@ -6,31 +6,6 @@
     top: 400%;
     z-index: 0;
     color: $white-primary;
-
-    // background: rgb(11, 18, 21);
-    // background: -moz-linear-gradient(
-    //     180deg,
-    //     rgba(11, 18, 21, 1) 0%,
-    //     rgba(240, 248, 255, 0) 10%,
-    //     rgba(240, 248, 255, 0) 90%,
-    //     rgba(11, 18, 21, 1) 100%
-    // );
-    // background: -webkit-linear-gradient(
-    //     180deg,
-    //     rgba(11, 18, 21, 1) 0%,
-    //     rgba(240, 248, 255, 0) 10%,
-    //     rgba(240, 248, 255, 0) 90%,
-    //     rgba(11, 18, 21, 1) 100%
-    // );
-    // background: linear-gradient(
-    //     180deg,
-    //     rgba(11, 18, 21, 1) 0%,
-    //     rgba(240, 248, 255, 0) 10%,
-    //     rgba(240, 248, 255, 0) 90%,
-    //     rgba(11, 18, 21, 1) 100%
-    // );
-    // filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#0b1215",endColorstr="#0b1215",GradientType=1);
-
     figure {
         margin: 0;
         overflow: hidden;
@@ -42,6 +17,7 @@
         top: 0;
         position: absolute;
         visibility: hidden;
+        transition: all 0.5s ease;
 
         &__outer,
         &__inner {
@@ -86,13 +62,13 @@
             padding: 0;
             color: $white-primary;
             z-index: 5;
-            grid-area: 1 / 3 / 7 / 10;
+            grid-area: 1 / 2 / 5 / 10;
             align-self: center;
         }
 
         &__img-cont {
             margin-top: 4rem;
-            grid-area: 2 / 1 / 7 / 8;
+            grid-area: 1 / 1 / 11 / 3;
 
             img {
                 width: 100%;
@@ -167,6 +143,8 @@
         left: 0;
         right: 0;
         z-index: 2;
+        transition: all 0.5s ease;
+
 
         &__content {
             max-width: 1400px;
@@ -186,8 +164,8 @@
             position: relative;
             overflow: hidden;
             margin: 0;
-            grid-area: 4 / 3 / 9 / 11;
-
+            grid-area: 2 / 8 / 11 / 10;
+            border-radius: 25px;
             img {
                 position: absolute;
                 width: 100%;
@@ -230,6 +208,7 @@
             margin-top: 0;
             grid-area: 3 / 2 / 11 / 4;
             transform: scale(1.4) translateX(-70px);
+            
         }
 
         .slide__heading {
